src/snapshots/new_nu_parser__test__node_output@table.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/table.nu
---
==== COMPILER ====
0: String (7 to 10) ""a""
1: String (12 to 15) ""b""
2: List(ListId(0)) (6 to 16)
3: Int (24 to 25) "1"
4: Int (27 to 28) "2"
5: List(ListId(1)) (23 to 29)
6: Int (35 to 36) "3"
7: Int (38 to 39) "4"
8: List(ListId(2)) (34 to 40)
9: Table(TableId(0)) (0 to 42)
10: Block(BlockId(0)) (0 to 42)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(10) (empty)
==== TYPES ====
0: string
1: string
2: list<string>
3: int
4: int
5: list<int>
6: int
7: int
8: list<int>
9: list<any>
10: list<any>
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 9): node Table(TableId(0)) not suported yet

