src/snapshots/new_nu_parser__test__node_output@table2.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/table2.nu
---
==== COMPILER ====
0: String (7 to 8) "a"
1: String (10 to 11) "b"
2: List(ListId(0)) (6 to 12)
3: Int (20 to 21) "1"
4: Int (23 to 24) "2"
5: List(ListId(1)) (19 to 25)
6: Int (31 to 32) "3"
7: Int (34 to 35) "4"
8: List(ListId(2)) (30 to 36)
9: Table(TableId(0)) (0 to 38)
10: Block(BlockId(0)) (0 to 38)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(10) (empty)
==== TYPES ====
0: string
1: string
2: list<string>
3: int
4: int
5: list<int>
6: int
7: int
8: list<int>
9: list<any>
10: list<any>
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 9): node Table(TableId(0)) not suported yet

